Fixed scrollbar background
TODO: colour work

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,32 @@
   font-family: Rubik, Ubuntu, system-ui, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
+
+/* This will change the scrollbar globally */
+/* For Chrome and Safari */
+*::-webkit-scrollbar {
+  background: transparent; 
+}
+*::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 4px; 
+}
+*::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+/* For Firefox */
+* {
+  scrollbar-color: #888 transparent;
+}
+* :hover {
+  scrollbar-color: #1150ae transparent;
+}
+
+/* TODO: fix colours above */
+
 
 /* #page-container {
   position: relative;
